# STM32F1_HAL_WithoutCubeMX

./: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE.md  README.md  STM32F103C8TX_FLASH.ld  STM32F1_HAL Debug.launch  STM32F1_HAL_WithoutCubeMX Debug.launch
Application/MPU6050/: TJ_MPU6050.c
Application/RC522/: rc522.c
Application/RTOS/: FreeRTOSConfig.h
Application/SdCard/: sd_driver.c
Core/Inc/: main.h  stm32f1xx_it.h
Core/Src/: main.c  printf_redirect.c  stm32f1xx_it.c
HAL/: stm32f1xx_hal_conf.h
HAL/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal.c
Peripherals/Inc/: adc.h  crc.h  exti.h  gpio.h  i2c.h  pwr.h  rcc.h  rtc.h  spi.h  tim.h  uart.h
Peripherals/Src/: adc.c  crc.c  exti.c  gpio.c  i2c.c  pwr.c  rcc.c  rtc.c  spi.c  tim.c  uart.c
cmake/: gcc-arm-none-eabi.cmake
